# experiments

./: .gitignore  README.md
data/: swebench_lite_curated.jsonl  swebench_lite_curated.meta.json  swebench_lite_curated_ids.txt
demos/: agentlab_demo_harness.js  harness_manifest.json  tasks.jsonl
docs/: BOUNDARY_FIRST_IMPLEMENTATION_SPEC.md  PATCH_SPEC.md  PATCH_SPEC_EXECUTOR_STORAGE_BOUNDARY.md
rust/: Cargo.toml
rust/crates/lab-cli/src/: main.rs
rust/crates/lab-runner/: Cargo.toml
rust/crates/lab-runner/src/: lib.rs
schemas/: benchmark_prediction_record_v1.jsonschema  benchmark_score_record_v1.jsonschema  benchmark_summary_v1.jsonschema  evidence_record_v1.jsonschema  resolved_experiment_v0_3.jsonschema  task_chain_state_v1.jsonschema
scripts/: build-curated-swebench-lite.mjs  run-swebench-lite-experiment.mjs
sdk/: README.md
sdk/src/: boundary-mappers.ts  client.ts  experiment-builder.ts  hook-events.ts  index.ts  trial-output.ts  types.ts
sdk/test/: boundary-mappers.test.ts  client.test.ts  experiment-builder.test.ts  hook-events.test.ts  trial-output.test.ts
